@@ -8,6 +8,7 @@ local addon, ns = ...
 local format = string.format
 local pairs = pairs
 local tonumber = tonumber
+local CreateFrame = CreateFrame
 local GetAddOnMetadata = GetAddOnMetadata
 local IsAddOnLoaded = IsAddOnLoaded
 
@@ -74,6 +75,62 @@ function MER:MismatchText()
 	return text
 end
 
+-- Splash Screen like BenikUI
+local function CreateSplashScreen()
+	local f = CreateFrame('Frame', 'SplashScreen', E.UIParent)
+	f:Size(300, 150)
+	f:SetPoint('CENTER', 0, 100)
+	f:SetFrameStrata('TOOLTIP')
+	f:SetAlpha(0)
+
+	f.bg = f:CreateTexture(nil, 'BACKGROUND')
+	f.bg:SetTexture([[Interface\LevelUp\LevelUpTex]])
+	f.bg:SetPoint('BOTTOM')
+	f.bg:Size(326, 103)
+	f.bg:SetTexCoord(0.00195313, 0.63867188, 0.03710938, 0.23828125)
+	f.bg:SetVertexColor(1, 1, 1, 0.7)
+	
+	f.lineTop = f:CreateTexture(nil, 'BACKGROUND')
+	f.lineTop:SetDrawLayer('BACKGROUND', 2)
+	f.lineTop:SetTexture([[Interface\LevelUp\LevelUpTex]])
+	f.lineTop:SetPoint("TOP")
+	f.lineTop:Size(418, 7)
+	f.lineTop:SetTexCoord(0.00195313, 0.81835938, 0.01953125, 0.03320313)
+	
+	f.lineBottom = f:CreateTexture(nil, 'BACKGROUND')
+	f.lineBottom:SetDrawLayer('BACKGROUND', 2)
+	f.lineBottom:SetTexture([[Interface\LevelUp\LevelUpTex]])
+	f.lineBottom:SetPoint("BOTTOM")
+	f.lineBottom:Size(418, 7)
+	f.lineBottom:SetTexCoord(0.00195313, 0.81835938, 0.01953125, 0.03320313)
+	
+	f.logo = f:CreateTexture(nil, 'OVERLAY')
+	f.logo:Size(256, 128)
+	f.logo:SetTexture('Interface\\AddOns\\MerathilisUI\\media\\textures\\merathilis_logo.tga')
+	f.logo:Point('CENTER', f, 'CENTER')
+	
+	f.version = f:CreateFontString(nil, 'OVERLAY')
+	f.version:FontTemplate(nil, 12, nil)
+	f.version:Point('TOP', f.logo, 'BOTTOM', 0, 30)
+	f.version:SetFormattedText("v%s", MER.Version)
+end
+
+local function HideSplashScreen()
+	SplashScreen:Hide()
+end
+
+local function FadeSplashScreen()
+	E:Delay(2, function()
+		E:UIFrameFadeOut(SplashScreen, 2, 1, 0)
+		SplashScreen.fadeInfo.finishedFunc = HideSplashScreen
+	end)
+end
+
+local function ShowSplashScreen()
+	E:UIFrameFadeIn(SplashScreen, 4, 0, 1)
+	SplashScreen.fadeInfo.finishedFunc = FadeSplashScreen
+end
+
 function MER:Initialize()
 	-- ElvUI versions check
 	if MER.ElvUIV < MER.ElvUIX then
@@ -83,6 +140,12 @@ function MER:Initialize()
 	self:RegisterMerMedia()
 	self:LoadCommands()
 	self:LoadGameMenu()
+	if E.db.muiGeneral.SplashScreen then
+		CreateSplashScreen()
+	end
+	
+	-- Show only Splash Screen if the install is completed
+	if (E.db.mui.installed == true and E.db.muiGeneral.SplashScreen) then C_Timer.After(6, ShowSplashScreen) end
 	
 	-- run the setup again when a profile gets deleted.
 	local profileKey = ElvDB.profileKeys[E.myname..' - '..E.myrealm]
