@@ -14,6 +14,7 @@ L[' Benik, Blazeflack, Darth Predator, Azilroka, Elv and all other AddOn Authors
 --L['Run the installation process.'] = true -- translated in ElvUI
 --L['General'] = true -- translated in ElvUI
 --L['Bags'] = true -- translated in ElvUI
+L['SplashScreen'] = true
 L['Enable/Disable the forcing of the Bag/Bank Frame position.'] = true
 L['Options'] = true
 L['CHAT_AFK'] = "[AFK]"
