@@ -1,5 +1,10 @@
 <b><u> v1.13, xx.xx.2015</b></u>
 <font color=#FF8C00>&#9830;</font> Chat: Add a new Module "muiChat". For now, it only remove the Server Names in the System messages.
+<font color=#FF8C00>&#9830;</font> Install: Adjust Player/Target/Boss Frames a bit.
+<font color=#FF8C00>&#9830;</font> Install: Adjust the BigWigs Profile a bit.
+<font color=#FF8C00>&#9830;</font> Reminder: Remove the reverseCheck for the Blood Presence.
+<font color=#FF8C00>&#9830;</font> Unitframes: Add a new Tag: 'health:percent_short' shows 100% instead of 100.0%.
+<font color=#FF8C00>&#9830;</font> Misc: Add a SplashScreen. (Stolen from Benik :p)
 
 <b><u> v1.12a, 12.12.2015</b></u>
 <font color=#FF8C00>&#9830;</font> Reminder: Another fix on the Reminder.
